--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ sudo: false
 language: java
 jdk:
 - oraclejdk8
+script:
+  - gradle build
 notifications:
   slack: rusynergy:43gO08tYr7lQJAEIG5fU37AF
