--- a/TTT/build.gradle
+++ b/TTT/build.gradle
@@ -2,6 +2,16 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 archivesBaseName = 'TTTJar'
 
+jar {
+    baseName = 'ttt'
+    version =  '0.0.1'
+}
+
 repositories {
     mavenCentral()
+}
+
+dependencies {
+    compile "joda-time:joda-time:2.2"
+    testCompile "junit:junit:4.12"
 }
