--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,14 @@
 apply plugin: 'java'
-apply plugin: 'eclipse'
+apply plugin: 'application'
 archivesBaseName = 'TTTJar'
 
-jar {
-    baseName = 'ttt'
-    version =  '0.0.1'
-}
+mainClassName = 'ttt.TicTacToe'
+
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile "joda-time:joda-time:2.2"
     testCompile "junit:junit:4.12"
 }
