--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,6 @@ repositories {
 }
 
 dependencies {
-    testCompile "junit:junit:4.12"
+	compile "org.apache.commons:commons-lang3:3.+"
+    testCompile "junit:junit:4.+"
 }
